# tldr-hs

./: .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  README.md  appveyor.yml  azure-linux-template.yml  azure-osx-template.yml  azure-pipelines.yml  azure-windows-template.yml  justfile  package.yaml  shell.nix  stack-lts-13.yaml  stack.yaml  tldr.cabal
.azure/: azure-linux-musl.yml  azure-linux-template.yml  azure-osx-template.yml  azure-windows-template.yml  build_release.sh
.github/workflows/: build.yml  release.yml
app/: Main.hs
src/: Tldr.hs
src/Tldr/: App.hs  Parser.hs  Types.hs
src/Tldr/App/: Constant.hs  Handler.hs
test/: Spec.hs
test/data/: grep.golden  ls.golden  ps.golden
