name:                tldr
version:             0.5.1
synopsis:            Haskell tldr client
description:         Haskell tldr client with support for updating and viewing tldr pages.
homepage:            https://github.com/psibi/tldr-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Sibi
maintainer:          sibi@psibi.in
copyright:           2017 Sibi
category:            Web
build-type:          Simple
extra-source-files:  README.md, CHANGELOG.md, test/data/*.golden, test/data/*.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tldr
  build-depends:       base >= 4.7 && < 5,
                       cmark,
                       text,
                       bytestring,
                       ansi-terminal
  default-language:    Haskell2010

executable tldr
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Paths_tldr
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tldr
                     , optparse-applicative
                     , directory
                     , filepath
                     , typed-process
                     , semigroups
  default-language:    Haskell2010

test-suite tldr-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tldr
                     , tasty
                     , tasty-golden
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/psibi/tldr-hs
